# OCaml-PaySlipKata

./: .gitignore  README.md  payslip_kata.opam
src/: dune  payslip_kata_lib.ml
